Fix section spacing

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ section{
     display: flex;
     align-items: center;
     gap: 24px;
-    padding: 80px 50px;
+    padding: 0 50px;
     font-size: 76px;
     line-height: 90px;
 }
